--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -1,6 +1,7 @@
 {% extends "page.html" %}
 
 {% block head_extra %}
+    <link type="text/css" rel="stylesheet" href="{{ url.data }}css/jquery.qtip.min.css">
     <style type="text/css">
         {% include "home/styles.css" %}
         {% include "home/tinycarousel.css" %}
