--- a/content/templates/fragments/extra.html
+++ b/content/templates/fragments/extra.html
@@ -11,7 +11,7 @@
 		<img id="carritoImagen" class="efectoCarritoImag" src="" alt="">
 	</div>
 	<div id="efectoCarritoB">
-		<a href="javascript:carrito_CloseCarrito()">
+		<a href="javascript:APP.cartClose()">
             <img src="/imagenes/b-carrContinuar.gif"
                     alt="Continuar" style="border:0;">
         </a>
