More work on the popup for the article

--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -5,6 +5,7 @@
     <style type="text/css">
         {% include "home/styles.css" %}
         {% include "home/tinycarousel.css" %}
+        {% include "fragments/gallery.css" %}
     </style>
 {% endblock %}
 
