A bit of text for authors

--- a/content/templates/macros/slider.html
+++ b/content/templates/macros/slider.html
@@ -29,7 +29,7 @@
                             {#- TITLE -#}
                             <p><a href="{{ product_url }}">{{ title }}</a></p>
                             {#- AUTHOR -#}
-                            <p><a href="/buscador/productos.jsp?seccion={{ section }}&amp;idSeccion={{ section }}&amp;criterioDeOrden=2&amp;claveDeBusqueda=porIDdeAutor&amp;texto={{ author|e }}&amp;idAutor={{ author_id }}">{{ author }}</a></p>
+                            <p>de <a href="/buscador/productos.jsp?seccion={{ section }}&amp;idSeccion={{ section }}&amp;criterioDeOrden=2&amp;claveDeBusqueda=porIDdeAutor&amp;texto={{ author|e }}&amp;idAutor={{ author_id }}">{{ author }}</a></p>
                             <p class="product-price">$ {{ price }}</p>
 		                    {%- if p.ProductForm_desc != None -%}
                                 <p class="product-format">
