--- a/content/templates/fragments/gallery.css
+++ b/content/templates/fragments/gallery.css
@@ -1,5 +1,9 @@
 /* gallery.css */
-p.product-price {
+p.product-popup-price {
     font-size:   1.4em;
+    font-weight: bold;
+}
+p.product-popup-title a {
+    font-size:   1.5em;
     font-weight: bold;
 }
