--- a/content/templates/fragments/product_gallery.html
+++ b/content/templates/fragments/product_gallery.html
@@ -83,44 +83,44 @@
 								<div id="sliderHomeBooks">
 									<a class="buttons prev" id="anterior1" onfocus="this.blur()"
 										href="#"><object>
-											<div id="anterior1DIV" class="mesaAnterior"></div>
+											<div id="anterior1DIV" class="gallery-prev"></div>
 										</object>
 								</a><div id="sliderBooks">{{ slider_home_books|replace("\n", "") }}</div>
 									 <a class="buttons next" id="siguiente1" onfocus="this.blur()" href="#"><object>
-											<div id="siguiente1DIV" class="mesaSiguiente"></div>
+											<div id="siguiente1DIV" class="gallery-next"></div>
 										</object>
 								</a></div></td>
 								<td align="center">
 								<div id="sliderHomeMusic">
 									<a class="buttons prev" id="anterior4" onfocus="this.blur()"
 										href="#"><object>
-											<div id="anterior4DIV" class="mesaAnterior"></div>
+											<div id="anterior4DIV" class="gallery-prev"></div>
 										</object>
 								</a><div id="sliderMusic">{{ slider_home_music|replace("\n", "") }}</div>
 									 <a class="buttons next" id="siguiente4" onfocus="this.blur()" href="#"><object>
-											<div id="siguiente4DIV" class="mesaSiguiente"></div>
+											<div id="siguiente4DIV" class="gallery-next"></div>
 										</object>
 								</a></div></td>
 								<td align="center">
 								<div id="sliderHomeMovies">
 									<a class="buttons prev" id="anterior5" onfocus="this.blur()"
 										href="#"><object>
-											<div id="anterior5DIV" class="mesaAnterior"></div>
+											<div id="anterior5DIV" class="gallery-prev"></div>
 										</object>
 								</a><div id="sliderMovies">{{ slider_home_movies|replace("\n", "") }}</div>
 									 <a class="buttons next" id="siguiente5" onfocus="this.blur()" href="#"><object>
-											<div id="siguiente5DIV" class="mesaSiguiente"></div>
+											<div id="siguiente5DIV" class="gallery-next"></div>
 										</object>
 								</a></div></td>
 								<td align="center">
 								<div id="sliderHomeGames">
 									<a class="buttons prev" id="anterior3" onfocus="this.blur()"
 										href="#"><object>
-											<div id="anterior3DIV" class="mesaAnterior"></div>
+											<div id="anterior3DIV" class="gallery-prev"></div>
 										</object>
 								</a><div id="sliderGames">{{ slider_home_games|replace("\n", "") }}</div>
 									 <a class="buttons next" id="siguiente3" onfocus="this.blur()" href="#"><object>
-											<div id="siguiente3DIV" class="mesaSiguiente"></div>
+											<div id="siguiente3DIV" class="gallery-next"></div>
 										</object>
 								</a></div></td>
 							</tr>
