Better gallery content handling

--- a/content/templates/fragments/gallery.css
+++ b/content/templates/fragments/gallery.css
@@ -1,4 +1,7 @@
 /* gallery.css */
+div.product-popup-content {
+    display:   none;
+}
 p.product-popup-price {
     font-size:   1.4em;
     font-weight: bold;
