Proper pop-up content div styling

--- a/content/templates/macros/slider.html
+++ b/content/templates/macros/slider.html
@@ -25,7 +25,7 @@
                         </a>
 
                         {#- POP UP -#}
-	                    <div class="product-popup" style="display: none;">
+	                    <div class="product-popup-content">
                             {#- TITLE -#}
                             <p class="product-popup-title">
                                 <a href="{{ product_url }}">{{ title }}</a>
