Previous commit: product availability handling

--- a/content/templates/macros/slider.html
+++ b/content/templates/macros/slider.html
@@ -24,7 +24,7 @@
 							<img src="{{ url.images ~ p.CoverSmall|e }}" width="98" alt="{{ title }}">
                         </a>
 
-                        {#- POP UP -#}
+                        {#- POP UP CONTENT HOLDER -#}
 	                    <div class="product-popup-content">
                             {#- TITLE -#}
                             <p class="product-popup-title">
