Fix Imprint search url missing id

--- a/content/templates/macros/slider.html
+++ b/content/templates/macros/slider.html
@@ -57,7 +57,7 @@
 		                            {%- elif movie -%}Productora:
 		                            {%- else       -%}Editorial:
 		                            {%- endif -%}
-                                    <a href="/buscador/productos.jsp?seccion={{ section }}&amp;idSeccion={{ section }}&amp;criterioDeOrden=2&amp;claveDeBusqueda=porIDdeEditorial&amp;texto={{ imprint }}&amp;idEditor=99" id="artEditor">{{ imprint}}</a>
+                                    <a href="/buscador/productos.jsp?seccion={{ section }}&amp;idSeccion={{ section }}&amp;criterioDeOrden=2&amp;claveDeBusqueda=porIDdeEditorial&amp;texto={{ imprint }}&amp;idEditor={{ p.ImprintId|string }}" id="artEditor">{{ imprint}}</a>
                                 </span></br>
                             {%- endif -%}
                             {#- BUY -#}
