--- a/content/templates/macros/slider.html
+++ b/content/templates/macros/slider.html
@@ -43,7 +43,7 @@
                                 <a href="{{ product_url }}">{{ title }}</a>
                             </p>
                             {#- AUTHOR -#}
-                            <p>de <a href="/buscador/productos.jsp?seccion={{ section }}&amp;idSeccion={{ section }}&amp;criterioDeOrden=2&amp;claveDeBusqueda=porIDdeAutor&amp;texto={{ author|e }}&amp;idAutor={{ author_id }}">{{ author }}</a></p>
+                            <span class="product-author">de <a href="/buscador/productos.jsp?seccion={{ section }}&amp;idSeccion={{ section }}&amp;criterioDeOrden=2&amp;claveDeBusqueda=porIDdeAutor&amp;texto={{ author|e }}&amp;idAutor={{ author_id }}">{{ author }}</a></p>
                             <p class="product-popup-price">$ {{ price }}</p>
 		                    {%- if p.ProductForm_desc != None -%}
                                 <p class="product-format">
