--- a/content/templates/macros/slider.html
+++ b/content/templates/macros/slider.html
@@ -39,16 +39,21 @@
                         {#- POP UP CONTENT HOLDER -#}
 	                    <div class="product-popup-content">
                             {#- TITLE -#}
-                            <p class="product-popup-title">
+                            <span class="product-popup-title">
                                 <a href="{{ product_url }}">{{ title }}</a>
-                            </p>
+                            </span><br>
                             {#- AUTHOR -#}
-                            <span class="product-author">de <a href="/buscador/productos.jsp?seccion={{ section }}&amp;idSeccion={{ section }}&amp;criterioDeOrden=2&amp;claveDeBusqueda=porIDdeAutor&amp;texto={{ author|e }}&amp;idAutor={{ author_id }}">{{ author }}</a></p>
-                            <p class="product-popup-price">$ {{ price }}</p>
+                            <span class="product-author">de <a href="/buscador/productos.jsp?seccion={{ section }}&amp;idSeccion={{ section }}&amp;criterioDeOrden=2&amp;claveDeBusqueda=porIDdeAutor&amp;texto={{ author|e }}&amp;idAutor={{ author_id }}">{{ author }}</a></span></br>
+                            <span class="product-popup-price">$ {{ price }}</span><br>
 		                    {%- if p.ProductForm_desc != None -%}
-                                <p class="product-format">
+                                {%- if book -%}
+                                    Edici&oacute;n:
+                                {%- else -%}
+                                    Formato:
+                                {%- endif -%}
+                                <span class="product-format">
                                     {{- p.ProductForm_desc.decode('utf-8') -}}
-                                </p>
+                                </span><br>
                             {%- endif -%}
 		                    {%- if p.ImprintName != None -%}
                                 <span class="product-imprint">
@@ -61,13 +66,13 @@
                                 </span></br>
                             {%- endif -%}
                             {#- BUY -#}
-                            <p>
+                            <span class="cart-add">
 		                    {%- if p.ProductAvailability == '21' -%}
                                 <a href="javascript:APP.cartAdd({{ product_id }})" title="agregar al carrito"><img src="{{ url.images }}/imagenes/rediseno/imagenes/seccionTematika/b-comprar.png" alt="agregar al carrito"></a>
 		                    {%- else -%} {#- ProductAvailability == '22' -#}
                                 <a href="javascript:if (confirm('Este producto no esta disponible actualmente. Desea hacer un pedido?'))document.location = '/PedidoEspecial?ID_ARTICULO={{ product_id }}';"><img src="{{ url.images}}/imagenes/rediseno/imagenes/seccionTematika/b-pedir.png" alt="Pedir"></a>
                             {%- endif -%}
-                            </p>
+                            </span><br>
 	                    </div> <!-- p-popup -->
 					</td>
 	        {%- if loop.index is divisibleby cols -%}
