--- a/content/templates/fragments/gallery.css
+++ b/content/templates/fragments/gallery.css
@@ -13,7 +13,8 @@ span.product-popup-title a {
     font-weight: bold;
 }
 
-span.product-imprint a, span.product-author, span.product-format a {
+span.product-imprint a, span.product-author, span.product-format a,
+        span.product-ranking, span.product-rating {
     margin-left: 0.5em;
 }
 
