--- a/content/templates/macros/slider.html
+++ b/content/templates/macros/slider.html
@@ -1,4 +1,5 @@
 {%- macro renderSlider(product_list, prefix, cols, url) -%}
+{%- set languages = { 'ES': 'Espa&ntilde;ol', 'EN': 'Ingl&eacute;s' } -%}
 <div class="viewport">
 	<ul class="overview">
 	{%- for p in product_list -%}
@@ -75,6 +76,12 @@
                                 Fecha de publicaci&oacute;n:
                                 <span class="product-date">
                                     {{- (pd[6:8], pd[4:6], pd[0:4])|join('/') -}}
+                                </span><br>
+                            {%- endif -%}
+		                    {%- if p.LanguageCode -%}
+                                Idioma:
+                                <span class="product-date">
+                                    {{- languages[p.LanguageCode] -}}
                                 </span><br>
                             {%- endif -%}
                             {#- BUY -#}
