fix language class

--- a/content/templates/macros/slider.html
+++ b/content/templates/macros/slider.html
@@ -80,7 +80,7 @@
                             {%- endif -%}
 		                    {%- if p.LanguageCode -%}
                                 Idioma:
-                                <span class="product-date">
+                                <span class="product-language">
                                     {{- languages[p.LanguageCode] -}}
                                 </span><br>
                             {%- endif -%}
