--- a/content/templates/fragments/gallery.css
+++ b/content/templates/fragments/gallery.css
@@ -1,16 +1,47 @@
 /* gallery.css */
 div.product-popup-content {
     display:   none;
+    line-height: normal;
 }
 
-span.product-popup-price {
-    font-size:   1.4em;
+div.ui-tooltip-content {
+    width: 24em;
+}
+
+div.ui-tooltip-content p {
+    margin:      0;
+}
+
+div.ui-tooltip-content table {
+    width: 95%;
+}
+
+div.ui-tooltip-content table td.product-popup-titleauthor {
+    width: 70%;
+}
+
+div.ui-tooltip-content table td.product-popup-price {
+    width: 29%;
+}
+
+div.ui-tooltip-content p.product-popup-title,
+        div.ui-tooltip-content p.product-author {
+    padding: 0.3em;
+}
+
+div.ui-tooltip-content p.product-popup-price {
+    font-size:   2em;
     font-weight: bold;
+    white-space: nowrap;
 }
 
-span.product-popup-title a {
+div.ui-tooltip-content p.product-popup-title a {
     font-size:   1.8em;
     font-weight: bold;
+}
+
+div.ui-tooltip-content p.product-cart-add {
+    text-align:  center;
 }
 
 div.ui-tooltip-content span {
