--- a/content/templates/macros/slider.html
+++ b/content/templates/macros/slider.html
@@ -41,20 +41,23 @@
                         {#- POP UP CONTENT HOLDER -#}
                         <div class="product-popup-content">
                             {#- TITLE -#}
-                            <span class="product-popup-title">
+                            <table><tbody><tr><td class="product-popup-titleauthor">
+                            <p class="product-popup-title">
                                 <a href="{{ product_url }}">{{ title }}</a>
-                            </span><br>
+                            </p>
                             {#- AUTHOR -#}
-                            <span class="product-author">de <a href="/buscador/productos.jsp?seccion={{ section }}&amp;idSeccion={{ section }}&amp;criterioDeOrden=2&amp;claveDeBusqueda=porIDdeAutor&amp;texto={{ author|e }}&amp;idAutor={{ author_id }}">{{ author }}</a></span></br>
-                            <span class="product-popup-price">$ {{ price }}</span>
+                            <p class="product-author">de <a href="/buscador/productos.jsp?seccion={{ section }}&amp;idSeccion={{ section }}&amp;criterioDeOrden=2&amp;claveDeBusqueda=porIDdeAutor&amp;texto={{ author|e }}&amp;idAutor={{ author_id }}">{{ author }}</a></p>
+                            </td><td>
+                            <p class="product-popup-price">$ {{ price -}}</p>
+                            </td></tr></tbody></table>
                             {#- BUY -#}
-                            <span class="cart-add">
+                            <p class="product-cart-add">
                             {%- if p.ProductAvailability == '21' -%}
                                 <a href="javascript:APP.cartAdd({{ product_id }})" title="agregar al carrito"><img src="{{ url.images }}/imagenes/rediseno/imagenes/seccionTematika/b-comprar.png" alt="agregar al carrito"></a>
                             {%- else -%} {#- ProductAvailability == '22' -#}
                                 <a href="javascript:if (confirm('Este producto no esta disponible actualmente. Desea hacer un pedido?'))document.location = '/PedidoEspecial?ID_ARTICULO={{ product_id }}';"><img src="{{ url.images}}/imagenes/rediseno/imagenes/seccionTematika/b-pedir.png" alt="Pedir"></a>
                             {%- endif -%}
-                            </span><br>
+                            </p>
                             {%- if p.ImprintName != None -%}
                                 {%- if   book  -%}Editorial:
                                 {%- elif music -%}Discogr&aacute;fica:
