--- a/content/templates/fragments/gallery.css
+++ b/content/templates/fragments/gallery.css
@@ -44,6 +44,25 @@ div.ui-tooltip-content p.product-cart-add {
     text-align:  center;
 }
 
+div.ui-tooltip-content table.product-infocomment {
+    margin:       0.5em;
+    border-width: 2px;
+    width:        99%;
+    text-align:   center;
+}
+
+div.ui-tooltip-content table.product-infocomment td.product-moreinfo {
+    width:     34%;
+}
+
+div.ui-tooltip-content table.product-infocomment td.product-comment {
+    width:     65%;
+}
+
+div.ui-tooltip-content table.product-infocomment td a {
+    font-size:    1.5em;
+}
+
 div.ui-tooltip-content span {
     margin-left: 0.5em;
 }
